--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,33 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=68.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
-name = "RAISE"
-version = "0.1.0"  
+name = "RAISE-RBP"
+version = "0.1.3"
 authors = [
-  { name="liuyilei8969", email="ylliu8969@gmail.com" },
+  { name = "liuyilei8969", email = "ylliu8969@gmail.com" },
 ]
 description = "RBP Activity Inference from Splicing Events"
 readme = "README.md"
 requires-python = ">=3.8"
+
+license = { text = "GNU General Public License v3 (GPLv3)" }
+
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
 ]
-license = "MIT"
-license-files = ["LICENSE"]
 
 [project.urls]
-Homepage = "https://gitee.com/liuyilei8969/RAISE/"
+Homepage = "https://github.com/liuyilei8969/RAISE/"
 Issues = "https://github.com/liuyilei8969/RAISE/issues"
 
-[tool.hatch.metadata]
-include = ["src"]
+[tool.setuptools]
+packages = { find = { where = ["src"] } }
+package-dir = {"" = "src"}
+include-package-data = true
+
+[tool.setuptools.package-data]
+RAISE = ["*.py", "data/*"]
